Jet method of adding const word instances.

--- a/manual-index.html
+++ b/manual-index.html
@@ -301,6 +301,9 @@
 <a href="Simplicity-Serialization-ByteString.html">Simplicity.Serialization.ByteString</a></span></li></ul></details></li>
 <li>
 <span class="module">
+<a href="Simplicity-Tags.html">Simplicity.Tags</a></span></li>
+<li>
+<span class="module">
 <a href="Simplicity-Tensor.html">Simplicity.Tensor</a></span></li>
 <li>
 <span class="module">
